# template_cpp_gtest

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
include/: sample.h
src/: CMakeLists.txt  sample.cc
test/: CMakeLists.txt  sample_test.cc
